# FileGlide

./: README.md  pyproject.toml
.skill/fileglide/: SKILL.md
.skill/fileglide/agents/: openai.yaml
.skill/fileglide/references/: command-substitution.md  workflow-and-pitfalls.md
docs/misc/: fileglide踩坑经验.md
fileglide/: __init__.py  __main__.py  app.py  exceptions.py  executor.py  facade.py  main.py  models.py  runtime.py  serializers.py
fileglide/commands/: __init__.py  batch.py  common.py  file.py  inspect.py  path.py  root.py  text.py  tree.py
fileglide/services/: __init__.py  batch.py  binary.py  encoding.py  filesystem.py  scope.py  search.py  sizing.py  text.py  traversal.py
i18n/: README.zh-CN.md  README.zh-TW.md
tests/: conftest.py  test_cli.py
tests/fixtures/batch/: sample-plan.json
tests/fixtures/encodings/: gb18030.txt  shift-jis.txt  utf-16-le.txt  utf-8-bom.txt  utf-8.txt
